<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yiyin.aobosh.fragments.AllClassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--搜索-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/shape_gray_storke">

                <ImageView
                    android:id="@+id/image_poi_microphone"
                    android:layout_width="14dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_tab_search" />

                <EditText
                    android:id="@+id/search_lesson_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:background="@null"
                    android:hint="输入课程名称进行搜索"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--排序 筛选-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <LinearLayout
                    android:id="@+id/lesson_sort_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lesson_sort_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="综合排序" />

                    <ImageView
                        android:id="@+id/lesson_sort_iv"
                        android:layout_width="10dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/icon_tab_sort_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lesson_filtrate_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lesson_filtrate_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="全部分类" />

                    <ImageView
                        android:id="@+id/lesson_filtrate_iv"
                        android:layout_width="10dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="4dp"
                        android:src="@drawable/icon_tab_sort_bottom" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_lite" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--课程列表-->
            <com.handmark.pulltorefresh.library.PullToRefreshListView
                android:id="@+id/lesson_item_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.handmark.pulltorefresh.library.PullToRefreshListView>

            <!--排序规则-->
            <LinearLayout
                android:id="@+id/sort_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/title_bg"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/sort_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:id="@+id/synthesize_sort"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/synthesize_sort" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/free_sort"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/free_sort" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/price_sort"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/price_sort" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hot_sort"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/hot_sort" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/score_sort"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/score_sort" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--筛选规则-->
            <LinearLayout
                android:id="@+id/filtrate_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/white">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lesson_category_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</FrameLayout>
